local-metadata: fix regexp and tests

https://bugzilla.gnome.org/show_bug.cgi?id=727181
https://bugzilla.gnome.org/show_bug.cgi?id=725025